# contextify

./: .gitignore  README.md  pyproject.toml
contextify/: cli.py  diff_tool.py
projctx/: cli.py  context_collector.py  diff_tool.py
tests/: test_context_collector.py
