[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "projctx"
version = "0.1.0"
description = "A project context snapshot and diff tool"
authors = [{ name="Your Name", email="your@email.com" }]
dependencies = [
    "deepdiff>=6.0.0"
]
requires-python = ">=3.7"

[project.scripts]
projctx = "projctx.cli:main"
