[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contextify"
version = "0.1.0"
description = "A project context snapshot and diff tool"
authors = [{ name="xin.li", email="lixin_cvmv@163.com" }]
dependencies = [
    "deepdiff==5.8.0"
]
requires-python = ">=3.7"

[project.scripts]
contextify = "contextify.cli:main"
